src/grammars/ref-lang/.antlr/RefLangParser.java
// Generated from c:/elan-language/LanguageAndIDE/src/grammars/ref-lang/RefLang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RefLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, ELIF=2, ELSE=3, ENUM=4, FOR=5, IF=6, IN=7, INPUT=8, LAMBDA=9, 
		MAIN=10, PRINT=11, RETURN=12, TRY=13, WHILE=14, IF_=15, ABSTRACT=16, ASSERT=17, 
		ASSIGN=18, BE=19, CALL=20, CATCH=21, CONSTANT=22, CONSTRUCTOR=23, COPY=24, 
		DIV=25, END=26, EVALUATES=27, FROM=28, FUNCTION=29, INHERITS=30, LET=31, 
		NEW=32, OF=33, PRIVATE=34, PROCEDURE=35, PROPERTY=36, RETURNS=37, SET=38, 
		STEP=39, TEST=40, THEN=41, THROW=42, TO=43, VARIABLE=44, ABSTRACT_METHOD=45, 
		ASSERT_EQUAL=46, AS=47, DEF=48, EXCEPT=49, INIT=50, NONE=51, PASS=52, 
		RAISE=53, ABC=54, TESTCASE=55, TUPLE=56, INT_NAME=57, FLOAT_NAME=58, BOOL_NAME=59, 
		STRING_NAME=60, LIST_NAME=61, FUNC_NAME=62, TRUE=63, FALSE=64, AND=65, 
		OR=66, NOT=67, EQUAL=68, NOT_EQUAL=69, MOD=70, ARROW=71, POWER=72, BINARY_PREFIX=73, 
		HEX_PREFIX=74, INTERPOLATED_STRING_PREFIX=75, THIS_INSTANCE=76, SINGLE_EQUALS=77, 
		OPEN_BRACE=78, CLOSE_BRACE=79, OPEN_SQ_BRACKET=80, CLOSE_SQ_BRACKET=81, 
		OPEN_BRACKET=82, CLOSE_BRACKET=83, DOT=84, COMMA=85, COLON=86, PLUS=87, 
		MINUS=88, MULT=89, DIVIDE=90, LT=91, GT=92, LE=93, GE=94, DOUBLE_QUOTES=95, 
		WS=96, NL=97, NAME_STARTING_TEST_=98, NAME_STARTING_LC=99, NAME_STARTING_UC=100, 
		LITERAL_BINARY=101, LITERAL_HEX=102, LITERAL_INTEGER=103, LITERAL_FLOAT=104, 
		LITERAL_STRING=105, WHITESPACES=106, TEXT=107, GHOSTED=108, FUNCTION_ANNOTATION=109, 
		PROCECDURE_ANNOTATION=110, CONSTANT_ANNOTATION=111, ENUM_ANNOTATION=112, 
		CONCRETE_CLASS_ANNOTATION=113, ABSTRACT_CLASS_ANNOTATION=114, VARIABLE_ANNOTATION=115, 
		ASSIGNMENT_ANNOTATION=116, INPUT_ANNOTATION=117, CALL_ANNOTATION=118, 
		LET_ANNOTATION=119, ELSE_IF_ANNOTATION=120, PROPERTY_ANNOTATION=121, FUNCTION_METHOD_ANNOTATION=122, 
		PROCEDURE_METHOD_ANNOTATION=123, COMMENT=124;
	public static final int
		RULE_file = 0, RULE_global = 1, RULE_main = 2, RULE_function = 3, RULE_test = 4, 
		RULE_procedure = 5, RULE_constant = 6, RULE_enum = 7, RULE_concreteClass = 8, 
		RULE_abstractClass = 9, RULE_comment = 10, RULE_commentText = 11, RULE_ordinaryStatement = 12, 
		RULE_ifStatement = 13, RULE_whileLoop = 14, RULE_forLoop = 15, RULE_tryStatement = 16, 
		RULE_assert = 17, RULE_letStatement = 18, RULE_print = 19, RULE_variableDefinition = 20, 
		RULE_assignment = 21, RULE_inputStatement = 22, RULE_procedureCall = 23, 
		RULE_throwStatement = 24, RULE_returnStatement = 25, RULE_elseIfClause = 26, 
		RULE_elseClause = 27, RULE_catchStatement = 28, RULE_constructorMember = 29, 
		RULE_property = 30, RULE_functionMethod = 31, RULE_procedureMethod = 32, 
		RULE_abstractFunction = 33, RULE_abstractProcedure = 34, RULE_identifier = 35, 
		RULE_assignable = 36, RULE_methodName = 37, RULE_testName = 38, RULE_typeName = 39, 
		RULE_constantValue = 40, RULE_argList = 41, RULE_argument = 42, RULE_paramsList = 43, 
		RULE_type = 44, RULE_enumValuesList = 45, RULE_assertActual = 46, RULE_litValue = 47, 
		RULE_litBoolean = 48, RULE_litInt = 49, RULE_litFloat = 50, RULE_enumValue = 51, 
		RULE_litString = 52, RULE_index = 53, RULE_identifierWithOptIndexes = 54, 
		RULE_propertyRef = 55, RULE_expression = 56, RULE_ifExpression = 57, RULE_term = 58, 
		RULE_chainHead = 59, RULE_chainTail = 60, RULE_chainable = 61, RULE_thisInstance = 62, 
		RULE_bracketedExpression = 63, RULE_unaryExpression = 64, RULE_negateNumeric = 65, 
		RULE_negateLogical = 66, RULE_binaryExpression = 67, RULE_list = 68, RULE_expressionList = 69, 
		RULE_tuple = 70, RULE_tupleElementList = 71, RULE_dictionary = 72, RULE_kvpList = 73, 
		RULE_kvp = 74, RULE_methodCall = 75, RULE_binaryOperator = 76, RULE_newInstance = 77, 
		RULE_paramDef = 78, RULE_typeGeneric = 79, RULE_typeFunc = 80, RULE_typeTuple = 81, 
		RULE_lambda = 82, RULE_interpolatedString = 83, RULE_power = 84;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "global", "main", "function", "test", "procedure", "constant", 
			"enum", "concreteClass", "abstractClass", "comment", "commentText", "ordinaryStatement", 
			"ifStatement", "whileLoop", "forLoop", "tryStatement", "assert", "letStatement", 
			"print", "variableDefinition", "assignment", "inputStatement", "procedureCall", 
			"throwStatement", "returnStatement", "elseIfClause", "elseClause", "catchStatement", 
			"constructorMember", "property", "functionMethod", "procedureMethod", 
			"abstractFunction", "abstractProcedure", "identifier", "assignable", 
			"methodName", "testName", "typeName", "constantValue", "argList", "argument", 
			"paramsList", "type", "enumValuesList", "assertActual", "litValue", "litBoolean", 
			"litInt", "litFloat", "enumValue", "litString", "index", "identifierWithOptIndexes", 
			"propertyRef", "expression", "ifExpression", "term", "chainHead", "chainTail", 
			"chainable", "thisInstance", "bracketedExpression", "unaryExpression", 
			"negateNumeric", "negateLogical", "binaryExpression", "list", "expressionList", 
			"tuple", "tupleElementList", "dictionary", "kvpList", "kvp", "methodCall", 
			"binaryOperator", "newInstance", "paramDef", "typeGeneric", "typeFunc", 
			"typeTuple", "lambda", "interpolatedString", "power"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'elif'", "'else'", "'enum'", "'for'", "'if'", "'in'", 
			"'input'", "'lambda'", "'main'", "'print'", "'return'", "'try'", "'while'", 
			"'if_'", "'abstract'", "'assert'", "'assign'", "'be'", "'call'", "'catch'", 
			"'constant'", "'constructor'", "'copy'", "'div'", "'end'", "'evaluates'", 
			"'from'", "'function'", "'inherits'", "'let'", "'new'", "'of'", "'private'", 
			"'procedure'", "'property'", "'returns'", "'set'", "'step'", "'test'", 
			"'then'", "'throw'", "'to'", "'variable'", "'@abstractmethod'", "'assertEqual'", 
			"'as'", "'def'", "'except'", "'__init__'", "'None'", "'pass'", "'raise'", 
			"'ABC'", "'unittest.TestCase'", "'tuple'", "'Int'", "'Float'", "'Boolean'", 
			"'String'", "'List'", "'Func'", "'true'", "'false'", "'and'", "'or'", 
			"'not'", "'is'", "'isnt'", "'mod'", "'=>'", "'**'", "'0b'", "'0x'", "'$'", 
			"'this'", "'='", "'{'", "'}'", "'['", "']'", "'('", "')'", "'.'", "','", 
			"':'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<='", "'>='", "'\"'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'[ghosted]'", "'# function'", "'# procedure'", "'# constant'", "'# enum'", 
			"'# concrete class'", "'# abstract class'", "'# variable definition'", 
			"'# assignment'", "'# input statement'", "'# procedure call'", "'# let'", 
			"'# else if'", "'# property'", "'# function method'", "'# procedure method'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "ELIF", "ELSE", "ENUM", "FOR", "IF", "IN", "INPUT", "LAMBDA", 
			"MAIN", "PRINT", "RETURN", "TRY", "WHILE", "IF_", "ABSTRACT", "ASSERT", 
			"ASSIGN", "BE", "CALL", "CATCH", "CONSTANT", "CONSTRUCTOR", "COPY", "DIV", 
			"END", "EVALUATES", "FROM", "FUNCTION", "INHERITS", "LET", "NEW", "OF", 
			"PRIVATE", "PROCEDURE", "PROPERTY", "RETURNS", "SET", "STEP", "TEST", 
			"THEN", "THROW", "TO", "VARIABLE", "ABSTRACT_METHOD", "ASSERT_EQUAL", 
			"AS", "DEF", "EXCEPT", "INIT", "NONE", "PASS", "RAISE", "ABC", "TESTCASE", 
			"TUPLE", "INT_NAME", "FLOAT_NAME", "BOOL_NAME", "STRING_NAME", "LIST_NAME", 
			"FUNC_NAME", "TRUE", "FALSE", "AND", "OR", "NOT", "EQUAL", "NOT_EQUAL", 
			"MOD", "ARROW", "POWER", "BINARY_PREFIX", "HEX_PREFIX", "INTERPOLATED_STRING_PREFIX", 
			"THIS_INSTANCE", "SINGLE_EQUALS", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_SQ_BRACKET", 
			"CLOSE_SQ_BRACKET", "OPEN_BRACKET", "CLOSE_BRACKET", "DOT", "COMMA", 
			"COLON", "PLUS", "MINUS", "MULT", "DIVIDE", "LT", "GT", "LE", "GE", "DOUBLE_QUOTES", 
			"WS", "NL", "NAME_STARTING_TEST_", "NAME_STARTING_LC", "NAME_STARTING_UC", 
			"LITERAL_BINARY", "LITERAL_HEX", "LITERAL_INTEGER", "LITERAL_FLOAT", 
			"LITERAL_STRING", "WHITESPACES", "TEXT", "GHOSTED", "FUNCTION_ANNOTATION", 
			"PROCECDURE_ANNOTATION", "CONSTANT_ANNOTATION", "ENUM_ANNOTATION", "CONCRETE_CLASS_ANNOTATION", 
			"ABSTRACT_CLASS_ANNOTATION", "VARIABLE_ANNOTATION", "ASSIGNMENT_ANNOTATION", 
			"INPUT_ANNOTATION", "CALL_ANNOTATION", "LET_ANNOTATION", "ELSE_IF_ANNOTATION", 
			"PROPERTY_ANNOTATION", "FUNCTION_METHOD_ANNOTATION", "PROCEDURE_METHOD_ANNOTATION", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RefLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RefLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RefLangParser.EOF, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(RefLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RefLangParser.NL, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(170);
				comment();
				}
				break;
			}
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1134412497938L) != 0) || _la==GHOSTED || _la==COMMENT) {
				{
				{
				setState(173);
				global();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(179);
				match(NL);
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public ProcedureContext procedure() {
			return getRuleContext(ProcedureContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public EnumContext enum_() {
			return getRuleContext(EnumContext.class,0);
		}
		public ConcreteClassContext concreteClass() {
			return getRuleContext(ConcreteClassContext.class,0);
		}
		public AbstractClassContext abstractClass() {
			return getRuleContext(AbstractClassContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		try {
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				main();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				function();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				test();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(190);
				procedure();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(191);
				constant();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(192);
				enum_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(193);
				concreteClass();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(194);
				abstractClass();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(195);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public List<TerminalNode> MAIN() { return getTokens(RefLangParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(RefLangParser.MAIN, i);
		}
		public List<TerminalNode> NL() { return getTokens(RefLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RefLangParser.NL, i);
		}
		public TerminalNode END() { return getToken(RefLangParser.END, 0); }
		public TerminalNode GHOSTED() { return getToken(RefLangParser.GHOSTED, 0); }
		public List<OrdinaryStatementContext> ordinaryStatement() {
			return getRuleContexts(OrdinaryStatementContext.class);
		}
		public OrdinaryStatementContext ordinaryStatement(int i) {
			return getRuleContext(OrdinaryStatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GHOSTED) {
				{
				setState(198);
				match(GHOSTED);
				}
			}

			setState(201);
			match(MAIN);
			setState(202);
			match(NL);
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21990233893216L) != 0) || _la==GHOSTED || _la==COMMENT) {
				{
				{
				setState(203);
				ordinaryStatement();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(209);
			match(END);
			setState(210);
			match(MAIN);
			setState(211);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public List<TerminalNode> FUNCTION() { return getTokens(RefLangParser.FUNCTION); }
		public TerminalNode FUNCTION(int i) {
			return getToken(RefLangParser.FUNCTION, i);
		}
		public MethodNameContext methodName() {
			return getRuleContext(MethodNameContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(RefLangParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(RefLangParser.CLOSE_BRACKET, 0); }
		public TerminalNode RETURNS() { return getToken(RefLangParser.RETURNS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RefLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RefLangParser.NL, i);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public TerminalNode END() { return getToken(RefLangParser.END, 0); }
		public TerminalNode GHOSTED() { return getToken(RefLangParser.GHOSTED, 0); }
		public ParamsListContext paramsList() {
			return getRuleContext(ParamsListContext.class,0);
		}
		public List<LetStatementContext> letStatement() {
			return getRuleContexts(LetStatementContext.class);
		}
		public LetStatementContext letStatement(int i) {
			return getRuleContext(LetStatementContext.class,i);
		}
		public List<OrdinaryStatementContext> ordinaryStatement() {
			return getRuleContexts(OrdinaryStatementContext.class);
		}
		public OrdinaryStatementContext ordinaryStatement(int i) {
			return getRuleContext(OrdinaryStatementContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GHOSTED) {
				{
				setState(213);
				match(GHOSTED);
				}
			}

			setState(216);
			match(FUNCTION);
			setState(217);
			methodName();
			setState(218);
			match(OPEN_BRACKET);
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME_STARTING_LC) {
				{
				setState(219);
				paramsList();
				}
			}

			setState(222);
			match(CLOSE_BRACKET);
			setState(223);
			match(RETURNS);
			setState(224);
			type();
			setState(225);
			match(NL);
			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 21992381376864L) != 0) || _la==GHOSTED || _la==COMMENT) {
				{
				setState(228);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(226);
					letStatement();
					}
					break;
				case 2:
					{
					setState(227);
					ordinaryStatement();
					}
					break;
				}
				}
				setState(232);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(233);
			returnStatement();
			setState(234);
			match(END);
			setState(235);
			match(FUNCTION);
			setState(236);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TestContext extends ParserRuleContext {
		public List<TerminalNode> TEST() { return getTokens(RefLangParser.TEST); }
		public TerminalNode TEST(int i) {
			return getToken(RefLangParser.TEST, i);
		}
		public TestNameContext testName() {
			return getRuleContext(TestNameContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(RefLangParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(RefLangParser.NL, i);
		}
		public TerminalNode END() { return getToken(RefLangParser.END, 0); }
		public TerminalNode GHOSTED() { return getToken(RefLangParser.GHOSTED, 0); }
		public List<AssertContext> assert_() {
			return getRuleContexts(AssertContext.class);
		}
		public AssertContext assert_(int i) {
			return getRuleContext(AssertContext.class,i);
		}
		public List<LetStatementContext> letStatement() {
			return getRuleContexts(LetStatementContext.class);
		}
		public LetStatementContext letStatement(int i) {
			return getRuleContext(LetStatementContext.class,i);
		}
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public TestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test; }
	}

	public final TestContext test() throws RecognitionException {
		TestContext _localctx = new TestContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_test);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(239);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GHOSTED) {
				{
				setState(238);
				match(GHOSTED);
				}
			}
